# midas-client

./: .bumpversion.cfg  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  publish_crate.yml
python/: pyproject.toml  requirements.txt
python/tests/data/: test_data.backtest.json
rust/: Cargo.toml  README.md
rust/src/: error.rs  historical.rs  instrument.rs  lib.rs  trading.rs
rust/tests/: integration_test.rs
rust/tests/data/: test_data.backtest.json
scripts/: dependencies.sh  test.sh
src/: historical.rs  instrument.rs
tests/: integration_test.rs
