[package]
name = "midas-client"
version = "1.0.19"
description = "A Python client library to access the midas_server backend."  
readme = "README.md"
keywords = ["midas", "client", "backend", "API"]  
license = "Apache-2.0"
authors = ["Anthony Baxter <anthonybaxter819@gmail.com>"]
repository = "https://github.com/midassystems/midas-client"
edition = "2021"


[dependencies]
reqwest = {version ="0.12.5", features = ["json", "stream"]}
serde = {version="1.0.204", features = ["derive"]}
serde_json= "1.0.137"
thiserror ={version = "2.0.11"}
futures-util = "0.3"  
chrono = { version = "0.4", features = ["serde"] }
futures ="0.3.31"
tokio-util="0.7.13"
tokio-stream="0.1.17"
mbinary = {version = "1.0.25"}

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
anyhow ="1.0.86"
serial_test = "3.1.1"
regex = "1.3.9"
dbn = "0.28.0"
databento ="0.20.0"

[lib]
crate-type = ["rlib"]
